<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JOY</string>

    <string name="route">线路</string>
    <string name="destination">目的地</string>
    <string name="travel_plan">旅行规划</string>
    <string name="order">订单</string>
    <string name="booking">预订</string>

    <!--公共的一些toast-->
    <string name="request_error">网络请求错误</string>

    <!--分享-->

    <string name="share_to">分享到</string>
    <string name="weibo">微博</string>
    <string name="wechat">微信</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="more">更多</string>
    <string name="wechat_no_app">请先安装微信客户端</string>

    <string name="topic">专题</string>
    <!--登录注册-->
    <string name="login_info">幸福啪啪啪</string>
    <string name="login_button">注册/登录</string>
    <string name="login_phone_hint">输入手机号码</string>
    <string name="login_code_hint">验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_reget_code">重新获取 %d</string>
    <string name="login_no_phone">请输入正确的电话号码</string>
    <string name="login_phone_code_success">短信已发出,请注意查看!</string>
    <string name="login_login_out_success">登出成功</string>
    <string name="login_phone_empty">请输入电话号码</string>
    <string name="login_success">登录成功</string>
    <string name="login_code_empty">请输入验证码</string>

    <string name="order_no_login">暂无订单</string>
    <string name="order_no_login_sub">登录后查看订单</string>

    <string name="travel_no_login">暂无规划</string>
    <string name="travel_no_login_sub">登录后查看规划</string>

    <string name="no_login_tip">立即登录</string>
    <!--设置界面-->
    <string name="setting_no_login">您还没有登录</string>
    <string name="setting_title">个人</string>
    <string name="setting_login_now">马上登录</string>
    <string name="setting_app">评价Joy</string>
    <string name="setting_rectangle">推荐给好友</string>
    <string name="setting_clean">清除所有缓存</string>
    <string name="setting_about">关于</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_loginout">退出登录</string>
    <string name="setting_version">Version :%s</string>
    <string name="setting_clean_success">清理完毕!</string>
    <!--设置界面-->

    <!-- 详情、商品 -->
    <string name="fmt_poi_before">需提前%s天预订</string>
    <string name="fmt_unit">¥ %s</string>
    <string name="fmt_unit_ge">%s个</string>
    <string name="fmt_kuohao">(%s)</string>
    <string name="add_plan">加入行程规划</string>
    <string name="highlights">项目亮点</string>
    <string name="introduce">简介</string>
    <string name="need_know">购买须知</string>
    <string name="need_know_tip">请仔细阅读相关内容</string>
    <string name="need_know_cost">费用说明</string>
    <string name="need_know_product">产品说明</string>
    <string name="need_know_use">使用方法</string>
    <string name="need_know_attention">注意事项</string>
    <string name="see_all">查看全部</string>
    <string name="book">立即预订</string>
    <string name="buy_count">购买数量</string>
    <string name="departure_date">出发日期</string>
    <string name="pay">立即支付</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="hint_input_name">输入联系人姓名</string>
    <string name="hint_input_phone">输入联系人电话</string>
    <string name="hint_input_email">输入邮箱以便确认信息</string>
    <string name="order_input_right_contact">请确保填写正确的联系方式</string>
    <string name="payment">支付方式</string>
    <string name="payment_wechat">微信支付</string>
    <string name="payment_alipay">支付宝支付</string>
    <string name="collapse">收起</string>
    <string name="added">已加入</string>

    <string name="toast_over_limit">您选择的商品数量已超上限，请重新选择</string>
    <string name="toast_input_date">请填写日期</string>
    <string name="toast_input_name">请填写姓名</string>
    <string name="toast_input_phone">请填写手机号码</string>
    <string name="toast_input_email">请填写邮箱地址</string>
    <string name="toast_email_error">您填写的邮箱地址格式不正确，请重新填写</string>
    <string name="toast_phone_error">您填写的手机号码格式不正确，请重新填写</string>
    <string name="toast_pay_success">订单支付成功</string>
    <string name="toast_pay_failed">订单支付失败</string>
    <string name="toast_cannot_delete">该订单正在处理中，暂时无法删除</string>

    <string name="alert_drop_content">您已填写的内容将丢失，确定返回？</string>
    <string name="alert_order_delete">确定删除订单？</string>
    <!--订单-->

    <string name="order_detail_title">订单状态</string>
    <string name="order_detail_id">订单编号</string>
    <string name="order_detail_item">所选项目</string>
    <string name="order_detail_day">出发日期</string>
    <string name="order_detail_count">购买数量</string>
    <string name="order_detail_name">联系人</string>
    <string name="order_detail_phone">预留电话</string>
    <string name="order_detail_email">预留邮箱</string>
    <string name="order_detail_total_price">总金额</string>

    <string name="order_detail_create_title">下单成功，请尽快支付</string>
    <string name="order_detail_create_infor">如有更多问题请咨询微信号\n1234567</string>

    <string name="order_detail_paied_title">订单支付完成，库存确认中…</string>
    <string name="order_detail_paied_infor">预计需要12小时，如有更多问题请咨询微信号\n1234567</string>

    <string name="order_detail_cancel_title">订单失效或被取消</string>
    <string name="order_detail_cancel_infor">如有更多问题请咨询微信号\n1234567</string>

    <string name="order_detail_finish_title">订单已确认，购买成功</string>
    <string name="order_detail_finish_infor">请查收确认邮件，如有更多问题请咨询微信号\n1234567</string>

    <string name="comment_all">全部点评</string>
    <string name="commenton">立即点评</string>
    <string name="commenton_score">在你心目中的分数</string>
    <string name="commenton_place">点评一下这个地方</string>
    <string name="commenton_submit">提交</string>
    <string name="commenton_success">点评成功</string>

    <!--地图-->
    <string name="toast_map_location_erro">定位失败，请稍后再试</string>
    <!--行程规划-->

    <string name="plan_folder_things">things to do</string>
    <string name="toast_plan_folder_adding">正在添加行程规划</string>
    <string name="toast_plan_folder_add_finish">加入行程规划成功</string>
    <string name="toast_plan_folder_add_erro">加入行程规划失败</string>
    <string name="alert_plan_folder_delete">确定删除旅行计划？</string>
    <string name="plan_folder_delete_success">删除成功</string>
    <string name="plan_folder_delete_erro">删除失败</string>
    <string name="plan_list_before_day">需提前%s天预定</string>

    <!--日历-->
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="afftertomorrow">后天</string>
    <string name="calendar_chose_satrt">请选择入住日期</string>
    <string name="day_picker_title">选择日期</string>
    <string name="calendar_chose_out">请选择离开日期</string>
    <string name="calendar_in">入住</string>
    <string name="calendar_out">离开</string>
    <string name="calendar_weekend">班</string>
    <string name="picker_title">出发日期</string>
    <!--日历-->
    <!--筛选-->
    <string name="more_then_5">最多添加5个筛选条件</string>

    <!-- city -->
    <string name="fmt_recommend_num">%s个推荐</string>
    <string name="recommend_route">推荐路线</string>
    <string name="city_fun_play">怎么玩</string>
    <string name="city_fun_hotel">住在哪</string>
    <string name="city_fun_food">吃什么</string>
    <string name="city_fun_shop">值得买</string>

    <string-array name="city_necessary">
        <item>景点/门票</item>
        <item>签证/出入境</item>
        <item>交通/接送机</item>
        <item>WIFI/电话卡</item>
    </string-array>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
</resources>
