<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/llUserInfoDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sdUserBG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_setting"/>

        <LinearLayout
            android:id="@+id/llLoginDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sdvUserHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:tint="@color/black_trans26"
                android:src="@drawable/ic_user_def_head"
                />

            <com.android.library.widget.JTextView
                android:id="@+id/tvLoginInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_bg_oval_accent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/setting_no_login"
                android:textColor="@android:color/white"
                android:textSize="12dp"/>

            <com.android.library.widget.JTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textSize="14dp"
                android:textStyle="bold"
                android:visibility="gone"/>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llApp"
        style="@style/setting_div">

        <ImageView
            android:id="@+id/iconSetting1"
            style="@style/setting_icon"
            android:src="@drawable/ic_setting_star"/>

        <com.android.library.widget.JTextView
            android:id="@+id/tvSetting1"
            style="@style/setting_text"
            android:text="@string/setting_app"
            />

        <ImageView
            android:id="@+id/ivSetting1"
            style="@style/setting_noun"/>
    </LinearLayout>

    <include layout="@layout/view_setting_line"/>

    <LinearLayout
        android:id="@+id/llRectangle"
        style="@style/setting_div">

        <ImageView
            android:id="@+id/iconSetting2"
            style="@style/setting_icon"
            android:src="@drawable/ic_setting_rectangle"/>

        <com.android.library.widget.JTextView
            android:id="@+id/tvSetting2"
            style="@style/setting_text"
            android:text="@string/setting_rectangle"
            />

        <ImageView
            android:id="@+id/ivSetting2"
            style="@style/setting_noun"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llClean"
        style="@style/setting_div"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/iconSetting3"
            style="@style/setting_icon"
            android:src="@drawable/ic_setting_clean"/>

        <com.android.library.widget.JTextView
            android:id="@+id/tvSetting3"
            style="@style/setting_text"
            android:text="@string/setting_clean"
            />

        <ImageView
            android:id="@+id/ivSetting3"
            style="@style/setting_noun"/>
    </LinearLayout>

    <include layout="@layout/view_setting_line"/>

    <LinearLayout
        android:id="@+id/llUpdate"
        style="@style/setting_div">

        <ImageView
            android:id="@+id/iconSetting5"
            style="@style/setting_icon"
            android:src="@drawable/ic_setting_update"/>

        <com.android.library.widget.JTextView
            android:id="@+id/tvSetting5"
            style="@style/setting_text"
            android:text="@string/setting_update"
            />

        <ImageView
            android:id="@+id/ivSetting5"
            style="@style/setting_noun"/>
    </LinearLayout>

    <include layout="@layout/view_setting_line"/>

    <LinearLayout
        android:id="@+id/llAbout"
        style="@style/setting_div">

        <ImageView
            android:id="@+id/iconSetting4"
            style="@style/setting_icon"
            android:src="@drawable/ic_setting_about"/>

        <com.android.library.widget.JTextView
            android:id="@+id/tvSetting4"
            style="@style/setting_text"
            android:text="@string/setting_about"
            />

        <ImageView
            android:id="@+id/ivSetting4"
            style="@style/setting_noun"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoginOut"
        style="@style/setting_div"
        android:layout_marginTop="15dp"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/iconSetting6"
            style="@style/setting_icon"
            android:src="@drawable/ic_setting_loginout"/>

        <com.android.library.widget.JTextView
            android:id="@+id/tvSetting6"
            style="@style/setting_text"
            android:text="@string/setting_loginout"
            />

    </LinearLayout>

    <com.android.library.widget.JTextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center|bottom"
        android:paddingBottom="10dp"
        android:textColor="@color/white_trans26"
        android:textSize="12dp"/>
</LinearLayout>