<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="25dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="25dp">


    <com.joy.library.widget.JTextView
        android:id="@+id/tvIntroduceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/introduce"
        android:textColor="@color/black_trans87"
        android:textSize="16dp" />

    <com.joy.library.widget.JTextView
        android:id="@+id/tvIntroduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/introduce"
        android:textColor="@color/black_trans54"
        android:textSize="13dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tvAllIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textColor="@color/white" />

    <View
        style="@style/Line.Light.Horizontal"
        android:layout_marginTop="16dp" />


    <com.joy.library.widget.JTextView
        android:id="@+id/tvKnowTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/need_know"
        android:textColor="@color/black_trans87"
        android:textSize="16dp" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdvKnow"
        android:layout_width="360dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/tvAllKnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textColor="@color/white" />

</LinearLayout>