<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.android.library.widget.JTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="19dp"
        android:paddingTop="12dp"
        android:text="@string/payment"
        android:textColor="@color/black_trans60"
        android:textSize="12dp" />

    <View
        style="@style/Line.Light.Horizontal"
        android:layout_marginLeft="20dp"
        android:background="@color/black_trans12" />

    <RadioGroup
        android:id="@+id/acrgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/acrbWeChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/ic_order_payment_wechat"
            android:drawablePadding="14dp"
            android:drawableRight="@drawable/selector_bg_checkbox"
            android:gravity="left|center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:paddingTop="15dp"
            android:text="@string/payment_wechat"
            android:textColor="@color/black_trans70"
            android:textSize="12dp" />

        <View
            style="@style/Line.Light.Horizontal"
            android:layout_marginLeft="20dp"
            android:background="@color/black_trans12" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/acrbAlipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableLeft="@drawable/ic_order_payment_alipay"
            android:drawablePadding="14dp"
            android:drawableRight="@drawable/selector_bg_checkbox"
            android:gravity="left|center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:paddingTop="15dp"
            android:text="@string/payment_alipay"
            android:textColor="@color/black_trans70"
            android:textSize="12dp" />

    </RadioGroup>
</LinearLayout>